<resources>
    <string name="app_name">FSDocs</string>
    <string name="welcome_string">WELCOME</string>
    <string name="signing_string">Log into\nFSDocs</string>
    <string name="username_hint_string">Username</string>
    <string name="passworrd_hint_string">Password</string>
    <string name="signing_btn_String">SIGN IN</string>
    <string name="signup_btn_String">SIGN UP</string>
    <string name="prof">Teacher</string>
    <string name="erreur">Empty field</string>
    <string name="nvProf">Sign up for a new student account</string>
    <string name="nvProf2">Sign up for a new teacher account</string>
    <string name="btn_new_std">Confirm</string>
    <string name="hintEmail">Email</string>
    <string name="signing_stringProf">Log into\nFSDocs</string>
    <string name="conf_pas">Password not valid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="log_into">Log into</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="switch_to_teacher">Not a student ?</string>
    <string name="switch_to_student">Not a teacher ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="your_firstname">Your firstname</string>
    <string name="your_lastname">Your lastname</string>
    <string name="next">NEXT</string>
    <string name="your_cne">Your CNE</string>
    <string name="your_birthdate">Your birth date</string>
    <string name="password_confirmation">Password, again</string>
    <string name="your_specialty">Your specialty</string>
</resources>
