<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"

    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.StudentLoginActivity">

    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:padding="5px"
        android:text="@string/welcome_string"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeLabel"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:weightSum="4"

        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/signing_string"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:id="@+id/titleLabel" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/usernameText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/ed_bg"
                android:drawableRight="@drawable/user_ic"
                android:hint="@string/username_hint_string" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ed_bg"
                android:drawableRight="@drawable/password_ic"
                android:hint="@string/passworrd_hint_string"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/signinButtonE"
                    android:layout_width="130dp"

                    android:layout_height="wrap_content"
                    android:layout_below="@+id/passwordText"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/signing_btn_String"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/signupButtonE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signinButtonE"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_bg"
                    android:text="@string/signup_btn_String"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/switchToTeacherBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="right"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/btn_bg"
        android:text="Professeur" />

</RelativeLayout>
