<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.login.StudentLoginActivity"
    android:background="@android:color/holo_blue_light">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeLabel"
        android:text="@string/welcome_string"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@android:color/holo_red_dark"
        android:padding="5px"

        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/welcomeLabel"
        android:layout_marginTop="20dp"
        android:weightSum="4"

        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/signing_stringProf"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:id="@+id/titleLabel" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:weightSum="4"
        android:gravity="center"
        android:id="@+id/loginLayout">
        <LinearLayout
            android:layout_width="10dp"
            android:layout_height="250dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:weightSum="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/userNameProf"
                android:hint="@string/username_hint_string"
                android:drawableRight="@drawable/user_ic"
                android:background="@drawable/ed_bg"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/passwordProf"
                android:hint="@string/passworrd_hint_string"
                android:drawableRight="@drawable/password_ic"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:background="@drawable/ed_bg"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:weightSum="2">
                <Button
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"

                    android:id="@+id/signinButtonP"
                    android:text="@string/signing_btn_String"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/btn_bg"
                    android:layout_below="@+id/passwordText"
                    android:layout_marginTop="10dp"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signupBtnP"
                    android:id="@+id/signupButtonP"
                    android:text="@string/signup_btn_String"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:background="@drawable/btn_bg"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Etudiant"
        android:id="@+id/switchToStudentBtn"
        android:layout_gravity="right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/btn_bg"
        android:layout_marginRight="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"/>

</RelativeLayout>
