<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/authentification_fragment_padding"
    tools:context=".ui.fragments.student.StudentFrag2">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/cneTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/cneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_cne"
            android:inputType="textCapWords" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/birthdateTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cneTextInput">

        <EditText
            android:id="@+id/birthdateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_birthdate"
            android:inputType="textCapCharacters" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:id="@+id/levelLayout"
        android:layout_below="@+id/birthdateTextInput">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Level:"
            android:id="@+id/textView"
            android:layout_weight="30"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:paddingLeft="5dp" />

        <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/levelSpinner"
            android:layout_below="@+id/birthdateTextInput"
            android:layout_weight="70"
            android:background="@drawable/white_rect_border" />
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/levelLayout"
        android:layout_centerHorizontal="true"
        android:text="@string/next" />

</RelativeLayout>
